[gd_scene load_steps=8 format=3 uid="uid://caxqw4oag1u50"]

[ext_resource type="PackedScene" uid="uid://dipmb0ce8ps10" path="res://_Scenes/Level/level.tscn" id="1_c4uvv"]
[ext_resource type="Shader" path="res://Assets/Shaders/glitch.gdshader" id="1_dk5fh"]
[ext_resource type="Script" path="res://_Scripts/Tutorial/tutorial.gd" id="1_nvupq"]
[ext_resource type="Theme" uid="uid://de0d88t3bbp3w" path="res://Assets/Themes/stack.tres" id="3_vjltb"]
[ext_resource type="Theme" uid="uid://engys5p3iknv" path="res://Assets/Themes/label.tres" id="4_tdmde"]
[ext_resource type="Theme" uid="uid://dltx8n0ryx35r" path="res://Assets/Themes/level_title.tres" id="6_kc81u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfb4o"]
shader = ExtResource("1_dk5fh")
shader_parameter/shake_power = 0.001
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 0.01
shader_parameter/shake_block_size = 2.0
shader_parameter/shake_color_rate = 0.001

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_nvupq")

[node name="Level" parent="." instance=ExtResource("1_c4uvv")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 425.0
offset_top = 45.0
offset_right = 1055.0
offset_bottom = 170.0
color = Color(0, 0, 0, 1)

[node name="ExampleTarget" type="Label" parent="."]
offset_left = 136.0
offset_top = 228.0
offset_right = 189.0
offset_bottom = 339.0
theme = ExtResource("3_vjltb")
text = "10

"

[node name="ExampleMovesCounter" type="Label" parent="."]
offset_left = 153.0
offset_top = 456.0
offset_right = 179.0
offset_bottom = 510.0
theme = ExtResource("3_vjltb")
text = "4"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 26.0
offset_top = 173.0
offset_right = 326.0
offset_bottom = 213.0
theme = ExtResource("4_tdmde")
bbcode_enabled = true
text = "[center]SCORE [color=red]AT LEAST[/color][/center]"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_vfb4o")
offset_right = 1280.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0)

[node name="TerminalText" type="Label" parent="."]
offset_left = 435.0
offset_top = 60.0
offset_right = 909.0
offset_bottom = 160.0
theme = ExtResource("4_tdmde")
text = "> LISTEN CLOSELY
"

[node name="ClickPrompt" type="Label" parent="."]
offset_left = 916.0
offset_top = 136.0
offset_right = 1047.0
offset_bottom = 161.0
theme = ExtResource("4_tdmde")
theme_override_font_sizes/font_size = 30
text = "CLICK TO CONTINUE"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.04

[node name="NextButton" type="Button" parent="."]
offset_left = 425.0
offset_top = 45.0
offset_right = 1055.0
offset_bottom = 170.0
flat = true

[node name="LevelTitleLabel" type="Label" parent="."]
offset_top = 42.0
offset_right = 320.0
offset_bottom = 106.0
theme = ExtResource("6_kc81u")
text = "LEVEL <null>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelTierLabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 107.0
offset_right = 312.0
offset_bottom = 139.0
theme = ExtResource("3_vjltb")
theme_override_font_sizes/font_size = 38
text = "TIER <null> HACK"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
